<resources>
    <string name="app_name">Lab2Activities</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registro">Registro</string>
    <string name="sitios_turisticos">Sitios Turísticos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contrasena">Contraseña</string>
    <string name="correoElectronico">Correo Electrónico</string>
    <string name="RegRegistro">REGISTRO</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_home">Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>