<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRegistry">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/fragmentRegistry"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constrainLayoutRegistry"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewRegistry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="24dp"
            android:text="@string/RegRegistro"
            android:textColor="#FF0707"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutRegUser"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRegistry">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextRegUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutRegPassword"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRegUser">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextRegPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasena" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutRegEmail"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRegPassword">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextRegEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correoElectronico" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonRegGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutRegEmail"
            app:layout_constraintVertical_bias="0.22000003" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>